--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -34,6 +34,11 @@
               <i class="fa fa-circle-o nav-icon"></i>
               <p>
                 <%= agenda.title %>
+                <% if current_user.id == agenda.team.owner_id %>
+                  <object>
+                    <%= link_to '削除', agenda_path(agenda.id), method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'agenda_delete_btn' %>
+                  </object>
+                <% end %>
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
