--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -43,7 +43,9 @@
                       <td><%= assign.user.email %></td>
                       <td><%= link_to '削除', team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
                       <% if current_user.id == @team.owner.id %>
-                        <td><%= link_to '権限移動', team_path(@team, params: { team: { owner_id: assign.user.id} }), method: :put %></td>
+                        <% if assign.user != @team.owner %>
+                          <td><%= link_to '権限移動', team_path(@team, params: { team: { owner_id: assign.user.id} }), method: :put %></td>
+                        <% end %>
                       <% end %>
                     </tr>
                   <% end %>
